2008-07-15  HINO Masayuki  <masahino@gmail.com>

	* dockapp_event.c: merged files

2006-09-14  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* release 0.2.3

2006-07-18  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* add new method(DockItem::set_image_at_size).

2006-07-15  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* dockpopup.c: 2 byte character can be displayed. 

2006-03-28  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* dockapp_utils.c: change get_pointer position

	* dockitem.c: change drawLEDstring

2006-03-22  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* dockitem.c: correct position of draw_led

2005-12-10  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* release 0.2.2

2005-12-10  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* examples/tooltips.rb: A example script os the tooltips window 

	* dockapp_popup.c: hide tooltips window when popup menu is drawn

2005-12-04  HINO Masayuki  <masahino@tky3.3web.ne.jp>

	* dockapp_main.c: add a new method DockApp.text_width

	* dockapp_utils.c: to raise tooltips window

2005-12-03 00:33  masahino

	* examples/wmhddtemp.rb: no comments

2005-12-03 00:32  masahino

	* docktimer.c: delete unused line

2005-12-03 00:31  masahino

	* dockitem.c, docktext.c: delete  debug messages

2005-12-03 00:30  masahino

	* dockapp_utils.c, dockapp_utils.h: delete unsed codes

2005-12-03 00:29  masahino

	* dockapp.h, dockapp_main.c: add version

2005-10-26 23:56  masahino

	* dockpopup.c: change an argument type of the
	  DockApp::PopUp.add_item

2005-10-26 22:33  masahino

	* examples/wmhddtemp.rb: no comments

2005-10-26 07:37  masahino

	* examples/wmhddtemp.rb: some changes...

2005-10-25 00:27  masahino

	* examples/wmhddtemp.rb: add a new example script

2005-10-20 23:43  masahino

	* examples/kbanner.rb (tags: Release_0_2_1): add new example.
	  display KANJI characters

2005-10-20 23:37  masahino

	* dockapp_utils.c (tags: Release_0_2_1): change posision of
	  tooltips window

2005-10-20 23:34  masahino
